[package]
name = "aprs-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aprs-parser = { git = "https://github.com/ta3pks/aprs-parser-rs", version = "0.4.0" }
async-trait = "0.1.68"
callpass = { version = "1.0.5", default-features = false }
clap = { version = "4.3.0", features = ["derive"] }
educe = { version = "0.4.22", default-features = false, features = ["default", "Default"] }
lettre = "0.10.4"
parking_lot = "0.12.1"
serde = { version = "1.0.163", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
twitter-v2 = "0.1.8"
